--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 float-end text-end">
                         <li class="nav-item">
-                            <a class="nav-link ms-5" href="#">Home</a>
+                            <a class="nav-link ms-5" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link ms-5" href="#">Studio</a>
+                            <a class="nav-link ms-5" href="#project">Studio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link ms-5" href="#">Our people</a>
+                            <a class="nav-link ms-5" href="#team">Our people</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link ms-5" href="#">Let's talk</a>
+                            <a class="nav-link ms-5" href="#contact">Let's talk</a>
                         </li>
                     </ul>
                 </div>
